force-app/main/default/objects/nFORCE__Translation__c/nFORCE__Translation__c.object-meta.xml
<CustomObject>
    <description>This object stores translations for a field on a record in a single language.</description>
    <label>Translation</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Translation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>