force-app/main/default/objects/nFORCE__Translation__c/fields/nFORCE__Translated_Text__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Translated_Text__c</fullName>
    <description>This optional text field contains the field&apos;s value in the translated language.</description>
    <inlineHelpText>This optional text field contains the field&apos;s value in the translated language.</inlineHelpText>
    <label>Translated Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>