force-app/main/default/objects/nFORCE__Translation__c/fields/Ruppe__c.field-meta.xml
<CustomField>
    <fullName>Ruppe__c</fullName>
    <label>Ruppe</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>